# retrodb

./: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  .gitmodules  Justfile  bun.lockb  package.json  pubspec.yaml  sqlite2sql.ts
dart/: libretrodb-sqlite  pubspec.yaml
dart/lib/: retrodb.dart
dart/test/: retrodb_test.dart
js/: README.md  bun.lockb  libretrodb.sqlite  package.json  tsconfig.json
js/example/: README.md  bun.lockb  index.ts  libretrodb.sqlite  package.json  vite.config.ts
js/example/src/: App.tsx  db.ts  index.tsx  worker.ts
js/src/: index.ts  locate.ts  schema.ts
lib/: models.dart  models.g.dart  retrodb.dart
lib/models/: columns.dart  filter.dart
rust/: Cargo.toml
rust/src/: lib.rs  models.rs  query.rs  tables.rs
rust/src/query/: filter.rs
rust/tests/: main.rs
test/: retrodb_test.dart
